# FlightData

./: .gitignore  README.md  pyproject.toml  setup.py
archive/: cirrus_csv.py
aurauas/flightdata/: aura_csv.py  aura_hdf5.py  flight_interp.py  flight_loader.py  imucal.py  umn3_hdf5.py
aurauas_flightdata/: aura_csv.py  aura_hdf5.py  umn3_hdf5.py
flightdata/: ardupilot_log.py  cirrus_csv.py  cirrus_pkl.py  flight_interp.py  flight_loader.py  px4_ulog.py
flightdata/formats/: aura_csv.py  aura_hdf5.py  cirrus_pkl.py  nst_hdf5.py  px4_ulog.py  umn1_mat.py
rcUAS/flightdata/: aura_hdf5.py  flight_loader.py
rcUAS_flightdata/: ardupilot_log.py  flight_interp.py  flight_loader.py  px4_ulog.py
src/aurauas/flightdata/: aura_csv.py  aura_txt.py  flight_interp.py  flight_loader.py  imucal.py  px4_ulog.py  sentera.py  sentera2.py  umn1_mat.py  umn3_hdf5.py  umn3_mat.py
