[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flightdata"
version = "1.5"
authors = [
  { name="Curtis L. Olson", email="curtolson@flightgear.org" },
]
description = "Flight data interface module."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NorthStarUAS/"

# [tool.hatch.build.targets.wheel]
# packages = ["flightdata"]